# xml2arrow-python

./: Cargo.toml  README.md  pyproject.toml
.github/workflows/: CI.yml  wasm.yml
python/xml2arrow/: __init__.py  _xml2arrow.pyi  exceptions.py
src/: file_like.rs  lib.rs
tests/: conftest.py  test_xml2arrow.py
tests/test_data/: bookstore.xml  bookstore.yaml  stations.yaml
