[package]
name = "_xml2arrow"
version = "0.13.0"
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "_xml2arrow"
crate-type = ["cdylib"]

[dependencies]
xml2arrow = { path = "../xml2arrow", features = ["python"] }
# xml2arrow = { version = "0.13.0", features = ["python"] }
arrow = { version = "57.3.0", features = ["pyarrow"] }
pyo3-file = "0.14.0"

[dependencies.pyo3]
version = "0.26"
features = ["extension-module", "abi3-py310"]
