[package]
name = "_xml2arrow"
version = "0.16.0"
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "_xml2arrow"
crate-type = ["cdylib"]

[dependencies]
xml2arrow = { version = "0.16.0", features = ["python"] }
arrow = { version = "58.1.0", features = ["pyarrow"] }

[dependencies.pyo3]
version = "0.28"
features = ["extension-module", "abi3-py310"]
