[build-system]
requires = ["maturin>=1.8,<2.0"]
build-backend = "maturin"

[project]
name = "xml2arrow"
requires-python = ">=3.10"
classifiers = [
    "Programming Language :: Rust",
    "Programming Language :: Python :: Implementation :: CPython",
]
dynamic = ["version"]

[tool.maturin]
name = "xml2arrow"
description = ""
requires-python = ">=3.10"
python-source = "python"
module-name = "xml2arrow._xml2arrow"
