[build-system]
requires = ["maturin>=1.8,<2.0"]
build-backend = "maturin"

[project]
name = "xml2arrow"
description = "Efficiently convert XML data to Apache Arrow format."
readme = "README.md"
requires-python = ">=3.10"
classifiers = [
    "Programming Language :: Rust",
    "Programming Language :: Python :: Implementation :: CPython",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Topic :: Software Development :: Libraries",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Text Processing :: Markup :: XML",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "Operating System :: OS Independent",
]
dynamic = ["version"]
dependencies = ["pyarrow>=14.0.0"]

[project.optional-dependencies]
test = [
    "pytest>=8.0.0",
    "pytest-cov>=4.0.0",
]

[project.urls]
"Homepage" = "https://github.com/mluttikh/xml2arrow-python"
"Bug Tracker" = "https://github.com/mluttikh/xml2arrow-python/issues"

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v --tb=short"
python_files = ["test_*.py"]
python_functions = ["test_*"]

[tool.coverage.run]
source = ["python/xml2arrow"]
omit = ["*/__pycache__/*", "*/tests/*"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "if TYPE_CHECKING:",
    "raise NotImplementedError",
]

[tool.maturin]
name = "xml2arrow"
description = "Efficiently convert XML data to Apache Arrow format."
requires-python = ">=3.10"
python-source = "python"
module-name = "xml2arrow._xml2arrow"

[tool.ruff]
# Target the minimum Python version supported by your project
target-version = "py310"
# Set the line length to a standard 88 (matches Black) or 100
line-length = 100
# Define the source directory for imports
src = ["python"]

[tool.ruff.lint]
# Enable a broad set of rules
select = [
    "E",    # pycodestyle errors
    "W",    # pycodestyle warnings
    "F",    # pyflakes
    "I",    # isort (import sorting)
    "B",    # flake8-bugbear
    "C4",   # flake8-comprehensions
    "UP",   # pyupgrade (upgrades syntax to target-version)
    "ARG",  # flake8-unused-arguments
    "PT",   # flake8-pytest-style
]

[tool.ruff.lint.isort]
# Ensure the internal module is recognized as first-party
known-first-party = ["xml2arrow"]
